src/test/success/if_else_statement_else.egern
var a = 4;
print(a);
if (a == 3) {
    print(1);
} else {
    print(0);
}
print(a);
