src/test/fail/comparisons_different_types_fail.egern
if (true == 2) {
    print(1)
} else {
    print(0)
}

if (3 == false) {
    print(1)
} else {
    print(0)
}

if (2 != true) {
    print(1)
} else {
    print(0)
}

if (false != 4) {
    print(1)
} else {
    print(0)
}

if (true < 1) {
    print(1)
} else {
    print(0)
}

if (2 < false) {
    print(1)
} else {
    print(0)
}

if (false > 1) {
    print(1)
} else {
    print(0)
}

if (2 > true) {
    print(1)
} else {
    print(0)
}

if (true <= 1) {
    print(1)
} else {
    print(0)
}

if (2 <= false) {
    print(1)
} else {
    print(0)
}

if (true >= 1) {
    print(1)
} else {
    print(0)
}

if (2 >= false) {
    print(1)
} else {
    print(0)
}
